refactor: 片っ端からNotNullを付与_1